--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test4": "./node_modules/mocha/bin/mocha ./test/smarttokens.js",
     "test5": "./node_modules/mocha/bin/mocha ./test/botcontroller.js",
     "test6": "./node_modules/mocha/bin/mocha ./test/crittermanager.js",
-    "test7": "./node_modules/mocha/bin/mocha ./test/market.js"
+    "test7": "./node_modules/mocha/bin/mocha ./test/market.js",
+    "test8": "./node_modules/mocha/bin/mocha ./test/airdrops.js"
   },
   "engines": {
     "node": ">=13.7.0",
