--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steemsmartcontracts",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "test5": "./node_modules/mocha/bin/mocha ./test/botcontroller.js",
     "test6": "./node_modules/mocha/bin/mocha ./test/crittermanager.js",
     "test7": "./node_modules/mocha/bin/mocha ./test/market.js",
-    "test8": "./node_modules/mocha/bin/mocha ./test/airdrops.js"
+    "test8": "./node_modules/mocha/bin/mocha ./test/airdrops.js",
+    "test9": "./node_modules/mocha/bin/mocha ./test/mining.js"
   },
   "engines": {
     "node": ">=13.7.0",
