--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test8": "./node_modules/mocha/bin/mocha ./test/airdrops.js",
     "test9": "./node_modules/mocha/bin/mocha ./test/mining.js",
     "test10": "./node_modules/mocha/bin/mocha ./test/packmanager.js",
-    "test11": "./node_modules/mocha/bin/mocha ./test/claimdrops.js"
+    "test11": "./node_modules/mocha/bin/mocha ./test/claimdrops.js",
+    "test12": "./node_modules/mocha/bin/mocha ./test/distribution.js"
   },
   "engines": {
     "node": ">=13.7.0",
