test parameters, 2+1 witnessess, 2 sigs req, deploy witness contract at test block

--- a/config.json
+++ b/config.json
@@ -7,12 +7,13 @@
     "blocksLogFilePath": "./blocks.log",
     "javascriptVMTimeout": 10000,
     "streamNodes": [
-        "https://api.openhive.network",
         "https://api.hive.blog",
+        "https://api.openhive.network",
         "https://anyx.io",
         "https://api.hivekings.com"
     ],
-    "startHiveBlock": 41967000,
+    "startHiveBlock": 50287280,
     "genesisHiveBlock": 41967000,
-    "witnessEnabled": false
+    "witnessEnabled": true,
+    "enableHashVerification": false
 }
