--- a/config.json
+++ b/config.json
@@ -16,5 +16,6 @@
     ],
     "startHiveBlock": 41967000,
     "genesisHiveBlock": 41967000,
-    "witnessEnabled": false
+    "witnessEnabled": false,
+    "enableHashVerification": true
 }
