--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steemsmartcontracts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "test9": "./node_modules/mocha/bin/mocha ./test/mining.js",
     "test10": "./node_modules/mocha/bin/mocha ./test/packmanager.js",
     "test11": "./node_modules/mocha/bin/mocha ./test/claimdrops.js",
-    "test12": "./node_modules/mocha/bin/mocha ./test/distribution.js"
+    "test12": "./node_modules/mocha/bin/mocha ./test/distribution.js",
+    "test13": "./node_modules/mocha/bin/mocha ./test/witnesses.js"
   },
   "engines": {
     "node": ">=13.7.0",
