--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
-services: mongodb
 language: node_js
 node_js:
   - "10.5"
 
+install:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1604-4.4.5.tgz
+  - tar xzf mongodb-linux-x86_64-ubuntu1604-4.4.5.tgz
+  - ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/bin/mongod --version
+
 # make mongodb a replica set
 before_script:
-  - mongo --version
   - echo "replication:" | sudo tee -a /etc/mongod.conf
   - |-
     echo "  replSetName: \"rs0\"" | sudo tee -a /etc/mongod.conf
-  - sudo service mongod restart
+  - mkdir ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/data
+  - ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/bin/mongod --dbpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/data --logpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/mongodb.log --fork
   - sleep 20
   - mongo --eval 'rs.initiate()'
   - sleep 15
@@ -17,3 +21,6 @@ before_script:
 script:
   - npm run lint
   - npm run test
+
+after_script:
+  - pkill mongod
