--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+branches:
+  only:
+    - "master"
+
 language: node_js
 node_js:
   - "10.5"
@@ -13,10 +17,11 @@ before_script:
   - |-
     echo "  replSetName: \"rs0\"" | sudo tee -a /etc/mongod.conf
   - mkdir ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/data
-  - ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/bin/mongod --dbpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/data --logpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/mongodb.log --fork
+  - ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/bin/mongod --dbpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/data --config /etc/mongod.conf --logpath ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/mongodb.log --fork
   - sleep 20
   - ${PWD}/mongodb-linux-x86_64-ubuntu1604-4.4.5/bin/mongo --eval 'rs.initiate()'
   - sleep 15
+  - npm install
 
 script:
   - npm run lint
