--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
 
 language: node_js
 node_js:
-  - "10.5"
+  - lts/*
 
 install:
   - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1604-4.4.5.tgz
