--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jayson": "^2.1.2",
     "js-base64": "^2.6.4",
     "line-by-line": "^0.1.6",
+    "loglevel": "^1.8.0",
     "mongodb": "^3.6.3",
     "read-last-lines": "^1.8.0",
     "seedrandom": "^3.0.5",
