--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
     ],
     "startHiveBlock": 41967000,
     "genesisHiveBlock": 41967000,
-    "witnessEnabled": true
+    "witnessEnabled": true,
+    "defaultLogLevel": "warn"
 }
