Adapt .env.example to the NATed-ports customization feature

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 ACTIVE_SIGNING_KEY=5K...
 ACCOUNT=acc...
 NODE_IP=...
+# If your public ports are different from your node config.js ports (requires NAT/port forwarding)
+#RPCNODEPORT=15000
+#P2PPORT=15001
