--- a/config.json
+++ b/config.json
@@ -18,5 +18,6 @@
     "witnessEnabled": true,
     "defaultLogLevel": "warn",
     "lightNode": false,
+    "blocksToKeep": 14400,
     "domain" : ""
 }
