--- a/config.json
+++ b/config.json
@@ -21,6 +21,7 @@
     "domain" : "",
     "rpcConfig" : {
         "maxLimit" : 1000,
-        "maxOffset" : -1
+        "maxOffset" : -1,
+        "logRequests" : true
     }
 }
